--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "axios": "^1.6.8",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
