--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/node": "^20.11.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
